# ziee-chat

./: .eslintrc.js  .gitignore  .gitmodules  .prettierignore  .prettierrc  README.md  eslint.config.js  generate-types.sh  index.html  package-lock.json  package.json  post-build.sh  vite.config.ts
build-helpers/: Cargo.toml
build-helpers/src/: apache_age.rs  bun.rs  lib.rs  main.rs  mistralrs.rs  pandoc.rs  pdfium.rs  pgvector.rs  postgres.rs  postgresql.rs  uv.rs
build-helpers/src/llamacpp/: backend.rs  config.rs  mod.rs  platform.rs
src-engines/mistralrs-server/: Cargo.toml
src-engines/mistralrs-server/src/: main.rs  mcp_server.rs
src-tauri/: .gitignore  Cargo.toml  DOWNLOAD_SSE_USAGE.md  build.rs  curl_test.txt  simple_test.json  start_server.sh  tauri.conf.json  test_api.py  test_api.sh  test_request.json  test_resource_paths.rs  test_streaming_api.py
src-tauri/candle-examples/examples/beit/: README.md  main.rs
src-tauri/candle-examples/examples/blip/: README.md  main.rs
src-tauri/candle-examples/examples/chatglm/: main.rs
src-tauri/candle-examples/examples/chinese_clip/: README.md  main.rs
src-tauri/candle-examples/examples/clip/: main.rs
src-tauri/candle-examples/examples/convmixer/: README.md  main.rs
src-tauri/candle-examples/examples/csm/: README.md
src-tauri/candle-examples/examples/depth_anything_v2/: README.md  main.rs
src-tauri/candle-examples/examples/dinov2/: README.md  main.rs
src-tauri/candle-examples/examples/dinov2reg4/: README.md  main.rs
src-tauri/candle-examples/examples/efficientnet/: README.md  main.rs
src-tauri/candle-examples/examples/encodec/: README.md
src-tauri/candle-examples/examples/eva2/: README.md  main.rs
src-tauri/candle-examples/examples/flux/: main.rs
src-tauri/candle-examples/examples/llava/: main.rs
src-tauri/candle-examples/examples/marian-mt/: main.rs
src-tauri/candle-examples/examples/metavoice/: main.rs
src-tauri/candle-examples/examples/mistral/: main.rs
src-tauri/candle-examples/examples/mnist-training/: README.md
src-tauri/candle-examples/examples/mobileclip/: main.rs
src-tauri/candle-examples/examples/moondream/: main.rs
src-tauri/candle-examples/examples/onnx/: README.md  main.rs
src-tauri/candle-examples/src/: imagenet.rs
src-tauri/candle-server/: Cargo.toml  README.md
src-tauri/candle-server/src/: lib.rs  main.rs  management.rs  mod.rs
src-tauri/candle-vllm-master/: Cargo.toml  README-CN.md  README.md  setup.py
src-tauri/candle-vllm-master/src/: main.rs
src-tauri/capabilities/: default.json
src-tauri/migrations/: 00000000000001_consolidated_migration.sql  00000000000001_init.sql  00000000000002_add_rag_instance_status_fields.sql  00000000000002_create_download_instances.sql  00000000000002_remove_checksum.sql  00000000000002_remove_path_column.sql  00000000000003_add_device_fields.sql  00000000000003_add_model_port.sql  00000000000003_make_error_code_nullable.sql  00000000000003_remove_user_id_from_downloads.sql  00000000000004_add_model_embedding_dimension.sql  00000000000004_create_file_management.sql  00000000000004_proxy_settings_to_json.sql  00000000000005_create_mcp_tables.sql  00000000000005_drop_project_documents.sql  00000000000006_message_content_refactor.sql  00000000000006_rename_config_name_to_key.sql  00000000000007_add_instruction_to_projects.sql  00000000000007_fix_mcp_tool_approvals_constraints.sql  00000000000008_add_message_metadata.sql  00000000000008_remove_file_path_column.sql  00000000000009_add_project_id_to_conversations.sql  00000000000011_add_page_count_to_files.sql  00000000000012_remove_document_extraction.sql  00000000000013_drop_project_conversations_table.sql  00000000000014_remove_is_private_from_projects.sql  00000000000015_add_engine_columns.sql  00000000000016_remove_backward_compatibility.sql  00000000000017_add_file_format.sql  00000000000018_create_api_proxy_server_tables.sql  00000000000019_add_deepseek_huggingface_providers.sql  00000000000020_add_source_column_to_models.sql  00000000000021_add_file_format_constraint.sql  00000000000022_add_none_engine_type.sql  00000000000023_fix_source_constraint.sql  00000000000024_create_rag_core_tables.sql  00000000000025_create_rag_engine_tables.sql  00000000000026_create_age_integration_tables.sql  00000000000027_drop_rag_databases_table.sql  00000000000028_add_rag_instance_manager_fields.sql  (+50 more)
src-tauri/mistralrs-server/: Cargo.toml
src-tauri/mistralrs-server/src/: main.rs
src-tauri/src/: auth.rs  env.rs  global.rs  lib.rs  main.rs  types.rs
src-tauri/src/ai/: anthropic.rs  auto_unload.rs  candle.rs  candle_config.rs  candle_models.rs  custom.rs  file_helpers.rs  gemini.rs  groq.rs  mistral.rs  mod.rs  model_manager.rs  model_server.rs  models.rs  openai.rs  openai_compatible.rs  paged_attention.rs  provider_base.rs  providers.rs  scheduler.rs
src-tauri/src/api/: api_proxy_server.rs  app.rs  assistants.rs  auth.rs  chat.rs  configuration.rs  conversation.rs  document_extraction.rs  download_instances.rs  engines.rs  errors.rs  files.rs  hardware.rs  hub.rs  macros.rs  middleware.rs  mod.rs  model_providers.rs  model_uploads.rs  models.rs  permissions.rs  projects.rs  providers.rs  rag_providers.rs  rag_repositories.rs  repositories.rs  user.rs  user_groups.rs  user_settings.rs
src-tauri/src/database/: macros.rs  migrations.rs  mod.rs  model_operations.rs  models.rs  queries.rs  types.rs
src-tauri/src/mcp/: mod.rs  protocol.rs  tool_discovery.rs  tool_executor.rs
src-tauri/src/processing/: extraction_utils.rs  manager.rs  mod.rs
src-tauri/src/route/: admin.rs  auth.rs  chat.rs  config.rs  conversation.rs  files.rs  helper.rs  hub.rs  mcp.rs  mod.rs  projects.rs  rag.rs  user.rs  utils.rs
src-tauri/src/startups/: ai_models.rs  api_proxy.rs  database.rs  file_storage.rs  hub.rs  mcp.rs  mod.rs  ngrok.rs  rag.rs
src-tauri/src/utils/: cancellation.rs  chat.rs  file_storage.rs  git_service.rs  hub_config.rs  hub_manager.rs  jwt_secret.rs  mod.rs  model_storage.rs  ngrok.rs  pandoc.rs  password.rs  pdfium.rs  proxy.rs  rag_file_storage.rs  resource_paths.rs
(+940 files in other folders)
