[package]
name = "build-helpers"
version = "0.1.0"
edition = "2021"


[dependencies]
ureq = "2.9"
zip = "0.6"
flate2 = "1.0"
tar = "0.4"
postgresql_embedded = { version = "0.20.0", default-features = false, features = ["bundled", "theseus", "rustls"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "migrate"] }
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
portpicker = "0.1"