[workspace]
members = [
    "."
]
exclude = [
    "mistralrs-server"
]
resolver = "2"

[package]
name = "ziee"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "ziee"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ziee_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ziee"
path = "src/main.rs"



[build-dependencies]
tauri-build = { version = "2", features = [] }
ureq = "2.10"
zip = "2.2"
flate2 = "1.0"
tar = "0.4"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
once_cell = "1.21.3"
tokio = { version = "1.46.1", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }
axum = { version = "0.8.4", features = ["macros", "multipart"] }
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
async-trait = "0.1"
async-stream = "0.3"
reqwest = { version = "0.12", features = ["json"] }
portpicker = "0.1"
postgresql_embedded = "0.19.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0.0"
bcrypt = "0.17.0"
jsonwebtoken = "9.3"
rand = "0.9.1"
hex = "0.4"
thiserror = "2.0.12"
git2 = { version = "0.19", features = ["vendored-openssl"] }
eventsource-stream = "0.2"

## Add mistralrs dependencies
mistralrs-core = { git = "https://github.com/EricLBuehler/mistral.rs.git" }
mistralrs-server-core = { git = "https://github.com/EricLBuehler/mistral.rs.git" }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"


[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.29", features = ["signal", "process"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "winnt", "handleapi"] }

[features]
default = []