[workspace]
members = [
    "."
]
exclude = [
    "../src-engines/mistralrs-server"
]
resolver = "2"

[package]
name = "ziee"
version = "0.1.0"
description = "Zie Chat"
authors = ["you"]
edition = "2021"
default-run = "ziee"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ziee_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ziee"
path = "src/main.rs"

[[bin]]
name = "generate-openapi"
path = "bin/generate-openapi.rs"



[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }
build-helpers = { path = "../build-helpers" }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "migrate"] }
postgresql_embedded = { version = "0.20.0", default-features = false, features = ["bundled", "theseus", "rustls"] }
tokio = { version = "1.47.1", features = ["rt", "macros"] }
portpicker = "0.1"
once_cell = "1.21.3"
libc = "0.2"

[dependencies]
tauri = { version = "2.8.4", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
once_cell = "1.21.3"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }
aide = { version = "0.15", features = ["axum", "axum-json", "axum-extra-json-deserializer", "axum-extra-query", "axum-extra", "axum-extra-headers", "axum-multipart", "axum-query", "macros", "redoc"] }
schemars = { version = "0.9.0", features = ["chrono04", "uuid1"] }
axum = { version = "0.8.4", features = ["macros", "multipart"] }
tower-http = { version = "0.6.6", features = ["cors", "fs", "set-header"] }
tower = "0.5"
async-trait = "0.1"
ngrok = "0.16.2"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
async-stream = "0.3"
reqwest = { version = "0.12", features = ["json", "multipart"] }
portpicker = "0.1"
postgresql_embedded = { version = "0.20.0", default-features = false, features = ["bundled", "theseus", "rustls"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "macros", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0.0"
bcrypt = "0.17.0"
jsonwebtoken = "9.3"
rand = "0.9.1"
hex = "0.4"
thiserror = "2.0.12"
tempfile = "3.8"
url = "2.5"
http = "1.0"
git2 = { version = "0.20.2", features = ["vendored-openssl"] }
sysinfo = "0.37.0"
lazy_static = "1.4"
eventsource-stream = "0.2"
pgvector = { version = "0.4", features = ["postgres", "halfvec", "sqlx"] }
sqlx-transparent-json-decode = "3.0.0"
nvml-wrapper = { version = "0.11.0", optional = true }
opencl3 = { version = "0.12.0", optional = true }
ash = { version = "0.38", optional = true }
wgpu-hal = { version = "26", optional = true }
libamdgpu_top = { version = "0.11.0", optional = true }
tauri-plugin-decorum = "1.1.1"
image = "0.25"
pdfium-render = "0.8"
pdf-extract = "0.9"
pptx-to-md = "0.4.0"
base64 = "0.22"
encoding_rs = "0.8"
sha2 = "0.10"
bytes = "1.8"
calamine = "0.30.0"
regex = "1.0"
futures = "0.3"
unicode-normalization = "0.1"
mistralrs-core = { git = "https://github.com/EricLBuehler/mistral.rs.git" }
mistralrs-server-core = { git = "https://github.com/EricLBuehler/mistral.rs.git" }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
logroller = "0.1"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "0.32.0", optional = true }
core-foundation = { version = "0.10.1", optional = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", features = ["signal", "process"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "winnt", "handleapi"] }

[features]
default = ["gpu-detect"]
gpu-detect = ["nvml-wrapper", "opencl3", "ash", "wgpu-hal", "libamdgpu_top", "metal", "core-foundation"]

[profile.dev.package.gemm-f16]
opt-level = 3
