[workspace]

[[bin]]
name = "mistralrs-server"
path = "src/main.rs"

[package]
name = "mistralrs-server"
readme = "README.md"
authors = ["Eric Buehler"]
version = "0.4.5"
edition = "2021"
description = "MistralRS server"
repository = "https://github.com/EricLBuehler/mistral.rs"
keywords = ["llm", "inference", "ai", "nlp"]
categories = ["science"]
license = "MIT"
homepage = "https://github.com/EricLBuehler/mistral.rs"
default-run = "mistralrs-server"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["tokio"] }
clap = { version = "4.0", features = ["derive"] }
ctrlc = "3.0"
directories = "5.0"
either = "1.0"
indexmap = "2.0"
mistralrs-core = { git = "https://github.com/EricLBuehler/mistral.rs.git" }
mistralrs-server-core = { git = "https://github.com/EricLBuehler/mistral.rs.git" }
once_cell = "1.0"
regex = "1.0"
rustyline = "14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
rust-mcp-sdk = { version = "0.5", features = ["server"] }
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }

[features]
cuda = ["mistralrs-core/cuda", "mistralrs-server-core/cuda"]
cudnn = ["mistralrs-core/cudnn", "mistralrs-server-core/cudnn"]
metal = ["mistralrs-core/metal", "mistralrs-server-core/metal"]
flash-attn = [
  "cuda",
  "mistralrs-core/flash-attn",
  "mistralrs-server-core/flash-attn",
]
accelerate = ["mistralrs-core/accelerate", "mistralrs-server-core/accelerate"]
mkl = ["mistralrs-core/mkl", "mistralrs-server-core/mkl"]
nccl = ["mistralrs-core/nccl", "mistralrs-server-core/nccl"]
ring = ["mistralrs-core/ring", "mistralrs-server-core/ring"]
mcp-server = ["rust-mcp-sdk/server"]
