[package]
name = "candle-server"
version = "0.1.0"
edition = "2021"
description = "Candle-based model server for ziee (based on candle-vllm)"
authors = ["you"]

[[bin]]
name = "candle-server"
path = "src/main.rs"

[dependencies]
# Core dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.46.1", features = ["full"] }
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }
axum = { version = "0.8.4", features = ["macros", "multipart"] }
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1.41"
thiserror = "2.0.12"
clap = { version = "4.4.7", features = ["derive"] }
lazy_static = "1.4"
anyhow = "1.0.75"

# Candle ML Framework dependencies
candle-core = { git = "https://github.com/guoqingbao/candle.git", version = "0.8.3", rev = "0334796" }
candle-nn = { git = "https://github.com/guoqingbao/candle.git", version = "0.8.3", rev = "0334796" }
candle-transformers = { git = "https://github.com/guoqingbao/candle.git", version = "0.8.3", rev = "0334796" }
candle-flash-attn = { git = "https://github.com/guoqingbao/candle.git", version = "0.8.3", optional = true, rev = "0334796" }
tokenizers = "0.21.2"
hf-hub = "0.4.1"

# Additional dependencies from candle-vllm
utoipa = { version = "4.2", features = ["axum_extras"] }
flume = "0.10.14"
rayon = "1.10.0"
derive_more = "0.99.17"
accelerate-src = { version = "0.3.2", optional = true }
intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"], optional = true }
cudarc = { version = "0.13.9", features = ["f16", "cuda-version-from-build-system"], optional = true }
half = { version = "2.5.0", features = ["num-traits", "use-intrinsics", "rand_distr"] }
either = { version = "1.13.0", features = ["serde"] }
minijinja = { version = "2.10.2", features = ["builtins", "json"] }
minijinja-contrib = { version = "2.10.2", features = ["pycompat"] }
metal = { version = "0.27.0", features = ["mps"], optional = true }
interprocess = "2.2.2"
serde-big-array = "0.5.1"
bincode = { version = "1.3.1" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
indicatif = "0.17.11"
mpi = { version = "0.8.0", optional = true }
parking_lot = "0.12"
akin = "0.4.0"
itertools = "0.13.0"
which = "5"
ahash = "0.8.11"
rand = "0.8.5"
dirs = "5.0.1"
kernels = { path = "../kernels", version = "0.1.0", optional = true }
metal-kernels = { path = "../metal-kernels", version = "0.1.0", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.29", features = ["signal", "process"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "winnt", "handleapi"] }

[features]
default = ["metal"]
accelerate = ["dep:accelerate-src", "candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda", "dep:kernels"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal", "dep:metal-kernels", "dep:metal"]
cudnn = ["candle-core/cudnn"]
flash-attn = ["cuda", "candle-transformers/flash-attn", "dep:candle-flash-attn"]
mkl = ["dep:intel-mkl-src", "candle-core/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
nccl = ["cuda", "cudarc/nccl"]
mpi = ["cuda", "cudarc/nccl", "dep:mpi"]